# dreamcloud

./: .flake8  .gitignore  .pdm-python  BeeRef.spec  CHANGELOG.rst  CONTRIBUTING.rst  DreamBoard.spec  README.rst  beeref.desktop  dreamboard.desktop  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  pytest.yml
beeref/: __main__.py  commands.py  constants.py  firebase.py  items.py  scene.py  selection.py  temp.txt  view.py
beeref/actions/: actions.py  menu_structure.py
beeref/fileio/: __init__.py
beeref/user/: __init__.py
dreamboard/: __main__.py  commands.py  config.py  constants.py  dreamb_logger.py  firebase.py  items.py  main_controls.py  scene.py  selection.py  user_instance.py  utils.py  view.py  widgets.py
dreamboard/actions/: __init__.py  actions.py  event_handling_arrange.py  event_handling_edit.py  event_handling_file.py  event_handling_insert.py  event_handling_mixin.py  event_handling_normalize.py  event_handling_presets.py  event_handling_transform.py  event_handling_view.py  menu_structure.py  mixin.py
dreamboard/assets/: __init__.py
dreamboard/cloud/: firebase_operations.py
dreamboard/fileio/: __init__.py  errors.py  image.py  sql.py
dreamboard/user/: __init__.py
dreamboard/views/: board_view.py  main_window.py  sidebar_widget.py
tests/: conftest.py  test_assets.py  test_commands.py  test_config.py  test_logging.py  test_main.py  test_scene.py  test_utils.py  test_view.py  test_widgets.py
tests/actions/: test_mixin.py
tests/fileio/: test_image.py  test_init.py  test_sql.py
(+6 files in other folders)
