[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=6.0.0",
    "pybadges>=3.0.0",
    "pyinstaller>=5.9.0",
    "yamllint>=1.30.0",
    "coverage>=7.2.2",
    "httpretty>=1.1.4",
    "pytest>=7.2.2",
    "pytest-qt>=4.2.0",
    "coverage>=7.2.2",
    "psutil>=5.9.4",
]

[project]
name = "BeeRef-Cloud"
version = "0.3.1"
description = "A simple reference image viewer"
readme = "README.rst"
authors = [
    {name = "Rebecca Breu", email = "rebecca@rbreu.de"},
    {name = "mini-ninja-64", email = "github@callumh.art"},
]
dependencies = [
    "exif",
    "pyQt6-Qt6>=6.4.2",
    "PyQt6>=6.5.1",
    "rectangle-packer>=2.0.1",
    "firebase-admin>=6.1.0",
]
license = {text = "LICENSE"}
requires-python = "==3.10.*"

[project.urls]
Homepage = "https://github.com/rbreu/beeref"

[project.gui-scripts]
beeref = "beeref.__main__:main"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
